--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.p1.gsa">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,10 @@
         android:theme="@style/Theme.GSA">
         <activity
             android:name=".signupas"
-            android:exported="true" ><!--android:theme="@style/Theme.GSA.NoActionBar"-->
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="true"> <!-- android:theme="@style/Theme.GSA.NoActionBar" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
