--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GSA">
         <activity
+            android:name=".nav_draw"
+            android:exported="false" />
+        <activity
             android:name=".sadminpage"
             android:exported="false" />
         <activity
@@ -25,7 +28,7 @@
             android:name=".signupas"
             android:exported="false" />
         <activity
-            android:name=".nav_draw"
+            android:name=".signupass"
             android:exported="true"> <!-- android:theme="@style/Theme.GSA.NoActionBar" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
