--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@
 buildscript {
     repositories {
         // Check that you have the following line (if not, add it):
-        google()  // Google's Maven repository
+        google()
+     //   mavenCentral()// Google's Maven repository
 
     }
     dependencies {
